SERVER-76790: Fix holding extra tickets during resharding oplog application