src/mongo/db/s/resharding/resharding_oplog_application.h
@@ -77,6 +77,10 @@ public:
                           const repl::OplogEntry& op) const;
 
 private:
+    // Applies an insert or update operation
+    void _applyInsertOrUpdate(OperationContext* opCtx,
+                              const boost::optional<ShardingIndexesCatalogCache>& gii,
+                              const repl::OplogEntry& op) const;
     // Applies an insert operation
     void _applyInsert_inlock(OperationContext* opCtx,
                              ScopedCollectionAcquisition& outputColl,
@@ -90,11 +94,9 @@ private:
                              const repl::OplogEntry& op) const;
 
     // Applies a delete operation
-    void _applyDelete_inlock(OperationContext* opCtx,
-                             const ScopedCollectionAcquisition& outputColl,
-                             const ScopedCollectionAcquisition& stashColl,
-                             const boost::optional<ShardingIndexesCatalogCache>& gii,
-                             const repl::OplogEntry& op) const;
+    void _applyDelete(OperationContext* opCtx,
+                      const boost::optional<ShardingIndexesCatalogCache>& gii,
+                      const repl::OplogEntry& op) const;
 
     // Queries '_stashNss' using 'idQuery'.
     BSONObj _queryStashCollById(OperationContext* opCtx,
